--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 ---
 layout: default
 ---
-<div class="container">
-  <div class="home">
+<div class="home">
 
   {% include section-hero.html %}
 
-  {% include section-one.html %}
-  {% include section-two.html %}
-  {% include section-three.html %}
-  {% include section-four.html %}
-  
+  {% include single-section.html %}
+
   {% include section-contact.html %}
 
-  </div>
 </div>
