--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ layout: default
 
   {% include section-hero.html %}
 
+  {% include section-about.html %}
+  {% include section-facts.html %}
   {% include single-section.html %}
-
+  {% include section-clients.html %}
   {% include section-contact.html %}
 
 </div>
