Update file to fit file system.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@ layout: default
 ---
 <div class="home">
 
-  {% include section-hero.html %}
-
-  {% include section-about.html %}
-  {% include section-facts.html %}
-  {% include single-section.html %}
-  {% include section-clients.html %}
-  {% include section-contact.html %}
+  {%include modules/jumbo-module.html %}
 
 </div>
