Include service right module.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <div class="home">
 
-  {%include modules/jumbo-module.html %}
+  {% include modules/jumbo-module.html %}
+
+  {% include modules/service-module-left.html %}
+
+  {% include modules/service-module-right.html %}
 
 </div>
