--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ layout: default
 
   {% include modules/service-module-left.html %}
 
+  {% include section-backgrounds/services-section.html %}
+
   {% include modules/service-module-right.html %}
+  {% include modules/service-module-left.html %}
+  {% include modules/service-module-right.html %}
+
+  {% include section-backgrounds/contact-section.html %}
 
 </div>
