--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@ layout: default
 
   {% include modules/jumbo-module.html %}
 
-  {% include modules/service-module-left.html %}
+  {% include modules/service-module-about.html %}
 
   {% include section-backgrounds/services-section.html %}
 
-  {% include modules/service-module-right.html %}
-  {% include modules/service-module-left.html %}
-  {% include modules/service-module-right.html %}
+  {% include modules/service-module.html %}
 
   {% include section-backgrounds/contact-section.html %}
 
